# CV_Test

./: .gitignore  Makefile  README.md  pyproject.toml  trained_model.pth
src/: app.py  constants.py  feature_extractor.py  mock_model.py  my_model.py  sign_language_translator.py  utils.py
without_hi/: trained_model.pth
